# world_model_rl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  walkthrough-overview.html  walkthrough-overview_task3.html
.claude/: settings.local.json
.tours/: new-joiner-wm-common.tour
docs/: GPU_CLOUD_SETUP.md  SURVEY.md  TARGETS.md  WORLD_MODEL_ROADMAP.md
docs/notes/: envs.md  infra.md  rssm.md
docs/superpowers/plans/: 2026-06-11-task0-repo-bootstrap.md
runs/rssm_smoke/: events.out.tfevents.1781778213.LCSKVM22098.23780.0  metrics.jsonl
runs/rssm_smoke/checkpoints/: latest.pt
scripts/: collect_random.py  demo_buffer_viz.py  smoke.py  train_rssm.py
tests/: test_buffer.py  test_checkpoint.py  test_device.py  test_envs.py  test_infra.py  test_rssm.py
wm/algos/rssm/: modules.py  rssm.py
wm/common/: buffer.py  checkpoint.py  device.py  eval.py  logger.py  viz.py
wm/common/envs/: __init__.py  atari.py  base.py  dmc.py
wm/configs/rssm/: default.yaml
