[project]
name = "world-model-zoo"
version = "0.1.0"
description = "World model RL lineage reproduction"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "torchvision>=0.20",
    "gymnasium[atari,accept-rom-license]>=0.29",
    "dm_control>=1.0",
    "tensorboard>=2.16",
    "einops>=0.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "imageio>=2.34",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wm"]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }

# Restrict resolution to Windows x86_64 only (XPU wheels are Windows/Linux x86_64).
# This prevents uv from trying to resolve pytorch-triton-xpu (Linux-only dep of
# older XPU wheels 2.6–2.8) during cross-platform lock generation, which would
# otherwise make the lock unsatisfiable on non-Linux splits.
[tool.uv]
environments = ["sys_platform == 'win32'"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
