[project]
name = "world-model-zoo"
version = "0.1.0"
description = "World model RL lineage reproduction"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "torchvision>=0.20",
    "gymnasium[atari]>=0.29",
    "dm_control>=1.0",
    "mujoco>=3.8.1,<3.9",  # 3.9 removed MjModel.flex_bandwidth that dm_control 1.0.41 reads
    "tensorboard>=2.16",
    "einops>=0.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "imageio>=2.34",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wm"]


# Windows → XPU (Intel Arc), Linux → CUDA 12.1 (cloud).
# get_device() priority (cuda > xpu > mps > cpu) handles runtime selection automatically.
[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-xpu",   marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-xpu",   marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Headless machines (no OpenGL driver) cannot render DMC; the probe leaves a
# MuJoCo GL context whose destructor warns. These are local-only artifacts —
# scoped by message so genuine issues still surface on GL-capable (cloud) boxes.
filterwarnings = [
    "ignore:.*MjrContext.*:pytest.PytestUnraisableExceptionWarning",
]
